# datanuke

./: .codacy.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.sh  test_etdk.sh
docs/: DEVELOPER_GUIDE.md  ROADMAP.md
include/: datanuke.h
src/: crypto.c  main.c  platform.c  secure_delete.c
