cmake_minimum_required(VERSION 3.15)
project(datanuke VERSION 1.0.0 LANGUAGES C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Debug and Release configurations
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build." FORCE)
endif()

# Compiler flags for better debugging and warnings
set(CMAKE_C_FLAGS_DEBUG "-g -O0 -Wall -Wextra -Wpedantic")
set(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG")

# Platform detection
if(WIN32)
    add_compile_definitions(PLATFORM_WINDOWS)
elseif(APPLE)
    add_compile_definitions(PLATFORM_MACOS)
elseif(UNIX)
    add_compile_definitions(PLATFORM_LINUX)
endif()

# Include directories
include_directories(include)

# Source files
set(SOURCES
    src/main.c
    src/crypto.c
    src/secure_delete.c
    src/platform.c
)

# Executable
add_executable(datanuke ${SOURCES})

# OpenSSL for cryptography
find_package(OpenSSL REQUIRED)
target_link_libraries(datanuke OpenSSL::Crypto)

# Platform-specific libraries
if(UNIX AND NOT APPLE)
    target_link_libraries(datanuke pthread)
endif()

# Installation
install(TARGETS datanuke DESTINATION bin)
